# StutterEase

./: .gitignore  README.md
mobile/: .gitignore  .prettierrc  app.json  package-lock.json  package.json
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  account.tsx  assistant.tsx  coach.tsx  index.tsx
mobile/app/(tabs)/coach/: _layout.tsx  conversation.tsx  index.tsx
mobile/components/: HapticTab.tsx  ThemedText.tsx  ThemedView.tsx
mobile/components/ui/: IconSymbol.ios.tsx  IconSymbol.tsx  TabBarBackground.ios.tsx  TabBarBackground.tsx
mobile/constants/: colors.ts
mobile/context/: AuthContext.tsx  ChatContext.tsx  ScenarioContext.tsx
mobile/hooks/: useThemeColor.ts
mobile/types/: auth.ts  coach.ts
server/: .env.template  .gitignore  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 093a7214d33c_base_with_all_tables.py  7053a6a85d6b_create_user_table.py  a426cd672212_added_email_to_user_model.py  e6b84ce3bda5_add_conversation_message_and_scenario_.py
server/src/: server.py
server/src/assistant/: router.py  services.py  utils.py
server/src/auth/: router.py  schemas.py  services.py  utils.py
server/src/coach/: models.py  router.py  schemas.py  services.py
server/src/core/: config.py  database.py  dependencies.py  lifespan.py  logging.py  metadata.py
server/src/core/middlewares/: cors_middleware.py
server/src/user/: models.py  router.py  schemas.py  services.py  utils.py
